<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search" android:icon="@drawable/ic_search"
        android:title="@string/search_chat" app:showAsAction="always" />
    <item android:id="@+id/action_pin" android:icon="@drawable/ic_pin"
        android:title="@string/pin_chat" app:showAsAction="never" />
    <item android:id="@+id/action_mute" android:icon="@drawable/ic_mute"
        android:title="@string/mute_chat" app:showAsAction="never" />
    <item android:id="@+id/action_safety" android:icon="@drawable/ic_shield"
        android:title="@string/chat_menu_safety" app:showAsAction="never" />
    <item android:id="@+id/action_rename" android:title="@string/chat_menu_rename"
        app:showAsAction="never" />
    <item android:id="@+id/action_clear" android:title="@string/chat_menu_clear"
        app:showAsAction="never" />
    <item android:id="@+id/action_delete" android:title="@string/chat_menu_delete"
        app:showAsAction="never" />
</menu>
