<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search" android:icon="@drawable/ic_search"
        android:iconTint="@color/text_primary"
        android:title="@string/search" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_sync" android:icon="@drawable/ic_sync"
        android:iconTint="@color/text_primary"
        android:title="@string/sync_now" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_search_messages" android:icon="@drawable/ic_search_big"
        android:iconTint="@color/text_primary"
        android:title="@string/search_messages" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:icon="@drawable/ic_settings"
        android:iconTint="@color/text_primary"
        android:title="@string/settings" app:showAsAction="ifRoom" />
</menu>
